Add PR life average feature and user participation statistics in commits